# caffe-windows-dependencies

./: .gitmodules  CMakeLists.txt  README.md  caffe-cache-init.cmakein
hdf5/: CMakeLists.txt
openblas/lib/cmake/openblas/: OpenBLASConfig.cmake
opencv/: CMakeLists.txt
